stop css from clobbering the input text on firefox [skip ci]

--- a/website/static/css/share-search.css
+++ b/website/static/css/share-search.css
@@ -36,7 +36,6 @@
   border: 1px solid #eee;
   box-shadow: none;
   border-radius: 0;
-  padding: 20px 20px;
   font-size: 21px;
   color: #214762;
   font-weight: 300;
